--- a/Capstone_Project_Aug8.ipynb
+++ b/Capstone_Project_Aug8.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "Second, I will use census data that the City of Portland posted at https://www.portlandoregon.gov/civic/28387. This data file will provide demographic information for each neighborhood including age groups. I will incorporate these findings with the geospatial data. By including age groups by neighborhood, we will be able to see the areas of the city where the most people between the ages of 18 and 39 live (people who are the most likely to get a tattoo).\n",
     "\n",
-    "Finally, I will use the FourSquare API to earch for business data in Portland, Oregon. I will search for all tattoo parlors in Portland, Oregon, and segment the findings by neighborhood. I will search for the top 5 venues for each neighborhood. I will create data frames to help with analyzing the data. I will map each neighborhood to show existing tattoo parlors. \n",
+    "Finally, I will use the FourSquare API to search for business data in Portland, Oregon. I will search for all tattoo parlors in Portland, Oregon, and segment the findings by neighborhood. I will search for the top 5 venues for each neighborhood. I will create dataframes to help with analyzing the data. I will map each neighborhood to show existing tattoo parlors. \n",
     "\n",
     "The best neighborhood will be determined by how many tattoo parlors already exist in the area, whether a neighborhood lists a tattoo parlor as a top-5 venue, and which neighborhood has the most people between the ages of 18 and 39. \n",
     "\n",
